--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             </div>
             </div>
             <div class="right-section">
-                <img src="bg1.png" alt="bg1">
+                <img src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712474927/bg1_d826l4.png" alt="bg1">
             </div>
         </section>
         <hr style="border: 0px; background: rgb(170, 167, 167); height: 1.2px; margin: 90px 90px;">
         <section class="second-section" id="about">
             <div class="sec-1">
-                <img src="Prashanth SangaIMG_jpg.jpg" alt="me">
+                <img src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475070/Prashanth_SangaIMG_jpg_ngd1r3.jpg" alt="me">
             </div>
             <div class="sec-2">
                 <h1>About me</h1>
@@ -58,21 +58,21 @@
         <div class="subheading1" id="projects">Projects</div>
         <section class="third-section">
             <div class="vertical-1">
-                <img href="netfliximg.png" src="netfliximg.png" alt="netflix clone">
+                <img href="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475154/netfliximg_xpcqgm.png" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475154/netfliximg_xpcqgm.png" alt="netflix clone">
                 <div class="intro">
                     <p>NETFLIX CLONE</p>
                 </div>
                 <button class="git1"><a href="https://www.youtube.com/">GITHUB</a></button>
             </div>
             <div class="vertical-2">
-                <img href="amazonimg.png" src="amazonimg.png" alt="amazon landing page">
+                <img href="https://res.cloudinary.com/drrmbmze3/image/upload/v1712474643/amazonimg_vwqkzn.png" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712474643/amazonimg_vwqkzn.png" alt="amazon landing page">
                 <div class="intro">
                     <p>AMAZON CLONE</p>
                 </div>
                 <button class="git2"><a href="https://www.youtube.com/">GITHUB</a></button>
             </div>
             <div class="vertical-3">
-                <img href="calculator.png" src="calculator.png" alt="calculator">
+                <img href="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475397/calculator_cpgwbb.png" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475397/calculator_cpgwbb.png" alt="calculator">
                 <div class="intro">
                     <p>CALCULATOR</p>
                 </div>
@@ -92,7 +92,7 @@
             </div>
         </section>
         <section class="fifth-section">
-            <img class="html" src="html-5.svg" alt=""><img class="css" src="css3.svg" alt=""><img class="tailwindcss" src="tailwindcss.svg" alt=""><img class="js" src="javascript.svg" alt="">
+            <img class="html" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475495/html-5_htbser.svg" alt=""><img class="css" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475628/css3_igantm.svg" alt=""><img class="tailwindcss" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475688/tailwindcss_cm5zty.svg" alt=""><img class="js" src="https://res.cloudinary.com/drrmbmze3/image/upload/v1712475744/javascript_lqoium.svg" alt="">
         </section>
         <section class="sixth-section">
             <h1 class="h11">HTML</h1>
